--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,8 +59,8 @@
 
   --jet: hsl(0, 0%, 22%);
   --onyx: hsl(240, 1%, 17%);
-  --eerie-black-1: hsl(240, 2%, 13%);
-  --eerie-black-2: hsl(240, 2%, 12%);
+  --eerie-black-1: hsl(0, 0%, 100%);
+  --eerie-black-2: hsl(0, 0%, 100%);
   --smoky-black: hsl(0, 0%, 7%);
   --white-1: hsl(0, 0%, 0%);
   --white-2: hsl(0, 0%, 0%);
@@ -1509,7 +1509,7 @@ textarea.form-input::-webkit-resizer { display: none; }
 
   .project-img, .blog-banner-box { border-radius: 16px; }
   .link-color {
-    color: white;
+    color: black;
    }
   .blog-posts-list { gap: 30px; }
 
