--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,16 +24,15 @@
   /* gradient */
 
   --bg-gradient-onyx: linear-gradient(
-    to bottom right,
-    hsla(0, 0%, 100%, 0.8) 0%,
-    hsla(0, 0%, 100%, 0) 100%
+    to bottom right, 
+    hsl(240, 1%, 25%) 3%, 
+    hsl(0, 0%, 19%) 97%
   );
   --bg-gradient-jet: linear-gradient(
     to bottom right,
-    hsla(0, 0%, 100%, 0.8) 0%,
-    hsla(0, 0%, 100%, 0) 100%
-  ), hsl(0, 0%, 98%);
-
+    hsla(240, 1%, 18%, 0.251) 0%,
+    hsla(240, 2%, 11%, 0) 100%
+  ), hsl(240, 2%, 13%);
   --bg-gradient-yellow-1: linear-gradient(
     to bottom right, 
     hsl(45, 100%, 71%) 0%, 
@@ -57,17 +56,17 @@
 
   /* solid */
 
-  --jet: hsl(0, 0%, 90%);
-  --onyx: hsl(0, 0%, 0%);
-  --eerie-black-1: hsl(0, 0%, 100%);
-  --eerie-black-2: hsl(0, 0%, 100%);
-  --smoky-black: hsl(0, 0%, 90%);
-  --white-1: hsl(0, 0%, 0%);
-  --white-2: hsl(0, 0%, 0%);
+  --jet: hsl(0, 0%, 22%);
+  --onyx: hsl(240, 1%, 17%);
+  --eerie-black-1: hsl(240, 2%, 13%);
+  --eerie-black-2: hsl(240, 2%, 12%);
+  --smoky-black: hsl(0, 0%, 7%);
+  --white-1: hsl(0, 0%, 100%);
+  --white-2: hsl(0, 0%, 98%);
   --orange-yellow-crayola: hsl(45, 100%, 72%);
   --vegas-gold: hsl(45, 54%, 58%);
-  --light-gray: hsl(0, 0%, 0%);
-  --light-gray-70: hsla(0, 0%, 0%, 0.7);
+  --light-gray: hsl(0, 0%, 84%);
+  --light-gray-70: hsla(0, 0%, 84%, 0.7);
   --bittersweet-shimmer: hsl(0, 43%, 51%);
 
   /**
@@ -97,11 +96,11 @@
    * shadow
    */
   
-  --shadow-1: -4px 8px 24px hsla(0, 0%, 100%, 0.25);
-  --shadow-2: 0 16px 30px hsla(0, 0%, 100%, 0.25);
-  --shadow-3: 0 16px 40px hsla(0, 0%, 100%, 0.25);
-  --shadow-4: 0 25px 50px hsla(0, 0%, 100%, 0.15);
-  --shadow-5: 0 24px 80px hsla(0, 0%, 100%, 0.25);
+  --shadow-1: -4px 8px 24px hsla(0, 0%, 0%, 0.25);
+  --shadow-2: 0 16px 30px hsla(0, 0%, 0%, 0.25);
+  --shadow-3: 0 16px 40px hsla(0, 0%, 0%, 0.25);
+  --shadow-4: 0 25px 50px hsla(0, 0%, 0%, 0.15);
+  --shadow-5: 0 24px 80px hsla(0, 0%, 0%, 0.25);
 
   /**
    * transition
@@ -1509,7 +1508,7 @@ textarea.form-input::-webkit-resizer { display: none; }
 
   .project-img, .blog-banner-box { border-radius: 16px; }
   .link-color {
-    color: black;
+    color: white;
    }
   .blog-posts-list { gap: 30px; }
 
